# data-science-essentials

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  make.py  notebook-requirements.txt  pyproject.toml  pytest.ini  requirements.gha.txt  requirements.txt  setup.py  sonar-project.properties
.github/scripts/: post_test_report.py
.github/workflows/: build-container.yml  pre-commit.yml  test-notebooks.yml  test-report.yml  test_report.yml
app/: config.py  requests.http  server.py
app/models/: pandas.py
app/routes/: pandas.py
helpers/: download_csv.py
notebooks/: README.md
notebooks/exploratory/: 01_iris_data_exploration.ipynb  02_url_data_loading_test.ipynb
source/data_readers/: __init__.py
source/pandas_utils/: __init__.py  read_data.py
src/: __init__.py
src/data/: __init__.py
src/data/sources/: __init__.py  pandas_source.py
src/utils/: __init__.py
src/utils/cache/: __init__.py  cache_manager.py
src/utils/network/: __init__.py  url_utils.py
tests/: conftest.py
tests/app/: test_config.py  test_models.py  test_routes_pandas.py  test_server.py
tests/app/models/: __init__.py  test_pandas.py
tests/app/routes/: __init__.py  test_pandas.py
tests/data/sources/: test_pandas_source.py
tests/data_readers/: __init__.py  test_pandas_data_reader.py
tests/pandas_utils/: test_read_data.py
tests/utils/: __init__.py
tests/utils/cache/: __init__.py  test_cache_manager.py
tests/utils/network/: __init__.py  test_url_utils.py
