[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data-science-essentials"
version = "0.1.0"
description = "Essential tools for data science"
authors = ["PiotrSacharuk"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^2.3.2"
numpy = "^2.2.6"
fastapi = { version = "^0.119.1", extras = ["standard"] }
httpx = "^0.28.1"
pydantic = "^2.12.3"
requests = "^2.32.5"
uvicorn = "^0.38.0"
python-multipart = "^0.0.20"
email-validator = "^2.3.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
pytest-json-report = "^1.5.0"
pre-commit = "^4.3.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
jupyter = "^1.0.0"
papermill = "^2.4.0"
nbconvert = "^7.2.1"
matplotlib = "^3.5.0"
seaborn = "^0.12.0"
plotly = "^5.10.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov=app --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py314']

[tool.ruff]
line-length = 88
target-version = "py314"
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]
